--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -236,7 +236,7 @@ summary::before {
   content: "Показать все новости";
 }
 details[open] summary::before {
-  content: "Скрыть все новости   \21E7";
+  content: "Скрыть все новости   \2191";
 }
 
 summary::-webkit-details-marker {
