--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -1,23 +1,44 @@
-* {
-  margin: 0;
-  padding: 0;
-}
 
-body {
-  height: 735px;
-  overflow-x: hidden;
-  font-family: "Gilroy", Courier, monospace;
-  margin: 0 auto;
-  background: #f6f6f6;
-  color: #242424;
-}
+ 
+ @keyframes animatetop {
+   from {top:-300px; opacity:0}
+   to {top:0; opacity:1}
+ }
 
-.flex {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-}
+.modal {
+   display: none; /* Hidden by default */
+   position: fixed; /* Stay in place */
+   z-index: 10; /* Sit on top */
+   padding-top: 10px; /* Location of the box */
+   left: 0;
+   top: 0;
+   width: 100%; /* Full width */
+   height: 100%; /* Full height */
+   overflow: auto; /* Enable scroll if needed */
+   background-color: rgb(0,0,0); /* Fallback color */
+   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+ }
 
+ .container-form {
+   position: relative;
+   background-color: #fefefe;
+   margin: auto;
+   padding: 0;
+   border: 1px solid #888;
+   width: 80%;
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+   -webkit-animation-name: animatetop;
+   -webkit-animation-duration: 0.4s;
+   animation-name: animatetop;
+   animation-duration: 0.4s
+ }
+
+ .close {
+   color: #81869C;
+   float: right;
+   font-size: 28px;
+   font-weight: bold;
+ }
 /*----------------------Белая кнопка--------------------------------*/
 
 .buttons-form .outerbutton-white {
@@ -31,6 +52,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   margin-left: 134px;
+    margin-top: 0px;
   @media (max-width: 640px) {
     & {
       height: 30px;
@@ -41,13 +63,14 @@ body {
   }
 }
 
-.innerbutton-white {
+.buttons-form .innerbutton-white {
   width: 133px;
   height: 32px;
   background: linear-gradient(180deg, #fbfbfb 0%, #f6f6f6 100%);
   box-shadow: 3px 3px 13px rgba(128, 128, 128, 0.25);
   border-radius: 58px;
   box-sizing: border-box;
+
   @media (max-width: 640px) {
     & {
       height: 22px;
@@ -83,6 +106,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   opacity: 0.7;
+  margin: 0px auto;
   @media (max-width: 640px) {
     & {
       height: 32px;
@@ -102,7 +126,7 @@ body {
   }
 }
 
-.innerbutton-yellow {
+.buttons-form .innerbutton-yellow {
   width: 158px;
   height: 32px;
   background: linear-gradient(180deg, #ffecb5 0%, #ffe69f 0.01%, #ffd45a 100%);
@@ -411,6 +435,10 @@ form:valid {
             width: 300px;
          }
       }
+      &:checked{
+         color:#000;
+         font-weight: 500;
+      }
       }
      
    }
@@ -441,6 +469,7 @@ form:valid {
    border-radius: 2px;
    left: 0px;
    margin-right: 12px;
+   flex-shrink: 0
  }
 
  /* стили для чекбокса, находящегося в фокусе */
@@ -456,10 +485,11 @@ form:valid {
 
 
  .checkbox:checked+label::before {
-   
+   content: "\2713";
+   text-align: center;
    background: linear-gradient(168.69deg, #FFD96F -1.56%, #FFC82B 52.74%, #F4B500 93.23%);
    box-shadow: 2px 2px 4px rgba(206, 206, 206, 0.25);   
-   color:#FFFFFF;
+   color:#FFFFFF; 
  }
 
  /*----------------------Стилизация radio-----------------------*/
@@ -476,6 +506,7 @@ form:valid {
    left: 0px;
    margin-right: 12px;
    border-radius: 50%;
+   flex-shrink: 0
  }
 
   /* стили для radio, находящегося в фокусе */
@@ -491,7 +522,10 @@ border: 2px solid #6B6B6B;
 
 
 .radio:checked+label::before {
- 
+   content: '\25CF';
+   font-size: 20px;
+   line-height: 15px;
+   text-align: center;
  background: linear-gradient(168.69deg, #FFD96F -1.56%, #FFC82B 52.74%, #F4B500 93.23%);
  box-shadow: 2px 2px 4px rgba(206, 206, 206, 0.25);   
  color:#FFFFFF;
