--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -44,7 +44,7 @@ li {
 
 li {
   padding-right: 32px;
-  &:nth-child(3) {
+  &:nth-of-type(4) {
     padding-left: 162px;
     @media (max-width: 1024px) {
       & {
@@ -62,6 +62,7 @@ li {
 
   #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
+    z-index: 12;
   }
   #menu__toggle:checked ~ .menu__btn > span::before {
     top: 0;
@@ -76,6 +77,7 @@ li {
     left: 0;
   }
 
+
   .menu__btn {
     display: flex;
     align-items: center;
@@ -87,7 +89,7 @@ li {
     height: 20px;
 
     cursor: pointer;
-    z-index: 1;
+    z-index: 10;
   }
 
   .menu__btn > span,
@@ -95,7 +97,6 @@ li {
   .menu__btn > span::after {
     display: block;
     position: absolute;
-
     width: 100%;
     height: 2px;
 
@@ -114,18 +115,16 @@ li {
 
   .menu__box {
     display: block;
-    position: fixed;
+    position: relative;
     visibility: hidden;
+    z-index: 3;
     top: 0;
     left: -100%;
-    padding-top: 80px;
     width: 300px;
     margin: 0;
     list-style: none;
-
     background-color: #ffffff;
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     transition-duration: 0.25s;
   }
 
@@ -139,15 +138,44 @@ li {
 
   .menu__link {
     display: block;
-    padding: 12px 24px;
+    padding: 2px 24px;
     text-decoration: none;
     transition-duration: 0.25s;
   }
 
   li {
     text-align: center;
-    padding-top: 35px;
-    padding-bottom: 24px;
+    padding-top: 23px;
+  }
+  
+  span.long{
+    border-bottom: 1px solid #FFC41E;
+    margin-left: 110px;
+    padding: 0px 270px;
+    @media(max-width:640px){
+      &{
+        margin-left: 67px;
+    padding: 0px 245px;
+      }
+    }
+    @media(max-width:360px){
+      &{
+
+    padding: 0px 114px;
+      }
+    }
+  }
+
+  li:nth-child(1){
+    display: none;
+    @media(max-width:768px){
+      &{
+        display: block;
+       background: #FFC41E;
+    height: 45px; 
+      }
+    }
+    
   }
 
   li:nth-child(3) {
