--- a/scss/_help-screen.scss
+++ b/scss/_help-screen.scss
@@ -174,6 +174,7 @@
     margin-top: 16px;
     margin-bottom: 8px;
     margin-left: 94px;
+
   }
   .help-screen-block .innerbutton-yellow {
     width: 184px;
@@ -184,6 +185,13 @@
     line-height: 20px;
   }
 }
+
+@media (max-width: 360px) {
+  .help-screen-block .outerbutton-yellow {
+    margin-left: 46px;
+  }
+}
+
 
 .volunteer .custom-image-wrapper__main-image::after {
   background: url(../image/щенок-кость.png) no-repeat center center;
@@ -202,10 +210,15 @@
 
 .volunteer .circle-image{
   @media (max-width: 768px){
-    margin-top: 104px;
+    &{
+      margin-top: 104px;
+    }
   }
   @media (max-width: 640px){
-    margin-top: 24px;
+    &{
+      margin-top: 24px;
+    }
+    
   }
 }
 
