--- a/scss/_about-u.scss
+++ b/scss/_about-u.scss
@@ -1,41 +1,26 @@
 .about-u {
-  margin: 56px 538px 54px 702px;
-  @media (max-width: 1440px) {
-    & {
-      margin-left: 442px;
-      margin-right: 318px;
-    }
-  }
-  @media (max-width: 1366px) {
-    & {
-      margin-left: 402px;
-      margin-right: 284px;
-    }
-  }
+  margin-top: 56px;
+  margin-bottom: 54px;
+  margin-left: calc(30px + (702 - 30) * ((100vw - 360px) / (1920 - 360)));
+  margin-right: calc(30px + (538 - 30) * ((100vw - 360px) / (1920 - 360)));
+ 
   @media (max-width: 1024px) {
     & {
-      margin: 48px 127px 48px 316px;
+      margin-top: 48px;
+      margin-bottom: 48px;
     }
   }
-  @media (max-width: 768px) {
-    & {
-      margin-left: 185px;
-      margin-right: 137px;
-    }
-  }
+ 
   @media (max-width: 640px) {
     & {
-      margin: 32px 129px 24px 129px;
+      margin-top: 32px;
+      margin-bottom: 24px;
     }
   }
-  @media (max-width: 360px) {
-    & {
-      margin-left: 30px;
-      margin-right: 30px;
-    }
-  }
+ 
   &__title {
-    width: 175px;
+    width: calc(74px + (175 - 74) * ((100vw - 1024px) / (1920 - 1024)));
+    //width: 175px;
     height: 32px;
     font-weight: 600;
     font-size: 28px;
@@ -44,58 +29,60 @@
     text-align: center;
     @media (max-width: 1024px) {
       & {
-        width: 118px;
+       // width: 118px;
         font-size: 24px;
         padding-left: 137px;
       }
     }
     @media (max-width: 1024px) {
       & {
-        width: 74px;
+       // width: 74px;
         font-size: 20px;
         padding-left: 162px;
       }
     }
     @media (max-width: 640px) {
       & {
-        width: 382px;
+        width: calc(299px + (382 - 299) * ((100vw - 360px) / (640 - 360)));
+       // width: 382px;
         font-size: 16px;
         padding-left: 0px;
       }
     }
     @media (max-width: 360px) {
       & {
-        width: 299px;
+       // width: 299px;
       }
     }
   }
   &_text {
-    width: 680px;
+   // width: 680px;
+    width: calc(299px + (680 - 299) * ((100vw - 360px) / (1920 - 360)));
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
     padding: 24px 0px;
     @media (max-width: 1024px) {
       & {
-        width: 481px;
+        //width: 481px;
         font-size: 16px;
       }
     }
     @media (max-width: 768px) {
       & {
-        width: 446px;
+        //width: 446px;
         font-size: 14px;
       }
     }
     @media (max-width: 640px) {
       & {
-        width: 382px;
+        //width: 382px;
         padding-bottom: 32px;
       }
     }
     @media (max-width: 360px) {
       & {
-        width: 299px;
+       // width: 299px;
       }
     }
   }
@@ -103,7 +90,8 @@
 
 .about-u-contacts {
   &__title {
-    width: 680px;
+   // width: 680px;
+    width: calc(299px + (680 - 299) * ((100vw - 360px) / (1920 - 360)));
     height: 26px;
     font-weight: normal;
     font-size: 22px;
@@ -111,31 +99,32 @@
     margin-top: 24px;
     @media (max-width: 1024px) {
       & {
-        width: 481px;
+       // width: 481px;
         font-size: 22px;
       }
     }
     @media (max-width: 768px) {
       & {
-        width: 446px;
+        //width: 446px;
         font-size: 20px;
       }
     }
     @media (max-width: 640px) {
       & {
-        width: 382px;
+        //width: 382px;
         font-size: 18px;
         margin-top: 32px;
       }
     }
     @media (max-width: 360px) {
       & {
-        width: 299px;
+        //width: 299px;
       }
     }
   }
   &__text {
-    width: 680px;
+    width: calc(299px + (680 - 299) * ((100vw - 360px) / (1920 - 360)));
+    //width: 680px;
     font-weight: normal;
     font-size: 16px;
     line-height: 140%;
@@ -143,26 +132,26 @@
     padding-bottom: 40px;
     @media (max-width: 1024px) {
       & {
-        width: 481px;
+       // width: 481px;
         padding-top: 16px;
       }
     }
     @media (max-width: 768px) {
       & {
-        width: 446px;
+       // width: 446px;
         font-size: 14px;
         padding-bottom: 32px;
       }
     }
     @media (max-width: 640px) {
       & {
-        width: 382px;
+        //width: 382px;
         padding-bottom: 24px;
       }
     }
     @media (max-width: 360px) {
       & {
-        width: 299px;
+        //width: 299px;
         padding-top: 18px;
       }
     }
