--- a/scss/_help.scss
+++ b/scss/_help.scss
@@ -226,78 +226,20 @@
 
 .line span::before {
   display: block;
-  width: 807px;
+  width:  calc(109px + (807 - 109) * ((100vw - 360px) / (1920 - 320))) ;
   content: "";
   border-bottom: 1px solid #ffc41e;
   float: left;
-  @media (max-width: 1440px) {
-    & {
-      width: 607px;
-    }
-  }
-  @media (max-width: 1366px) {
-    & {
-      width: 576px;
-    }
-  }
-  @media (max-width: 1024px) {
-    & {
-      width: 433px;
-    }
-  }
-  @media (max-width: 768px) {
-    & {
-      width: 327px;
-    }
-  }
-  @media (max-width: 640px) {
-    & {
-      width: 249px;
-    }
-  }
-  @media (max-width: 360px) {
-    & {
-      width: 109px;
-    }
-  }
+  
 }
 
 .line span::after {
   display: block;
-  width: 807px;
+  width:  calc(109px + (807 - 109) * ((100vw - 360px) / (1920 - 320))) ;
   content: "";
   border-bottom: 1px solid #ffc41e;
   float: right;
-  @media (max-width: 1440px) {
-    & {
-      width: 607px;
-    }
-  }
-  @media (max-width: 1366px) {
-    & {
-      width: 576px;
-    }
-  }
-  @media (max-width: 1024px) {
-    & {
-      width: 433px;
-    }
-  }
-  @media (max-width: 768px) {
-    & {
-      width: 327px;
-    }
-  }
-  @media (max-width: 640px) {
-    & {
-      width: 249px;
-    }
-  }
-  @media (max-width: 360px) {
-    & {
-      width: 109px;
-    }
-  }
+  
 }
 
 /*----------------------продолжение 3 экрана--------------------------------*/
@@ -315,33 +257,21 @@
     }
   }
   span {
-    width: 265px;
+    width: calc(52px + (265 - 52) * ((100vw - 360px) / (1920 - 320))) ;
     height: 144px;
-    @media (max-width: 1440px) {
-      & {
-        width: 186px;
-      }
-    }
-    @media (max-width: 1366px) {
-      & {
-        width: 174px;
-      }
-    }
+   
     @media (max-width: 1024px) {
       & {
-        width: 118px;
         height: 98px;
       }
     }
     @media (max-width: 768px) {
       & {
-        width: 74px;
         height: 62px;
       }
     }
     @media (max-width: 640px) {
       & {
-        width: 63px;
         height: 52px;
       }
     }
