--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -1,42 +1,29 @@
 .news {
   background: #ffffff;
   padding-top: 54px;
-  padding-left: 604px;
-  padding-bottom: 53px;
-  @media (max-width: 1440px) {
-    & {
-      padding-left: 314px;
-    }
-  }
-  @media (max-width: 1366px) {
-    & {
-      padding-left: 304px;
-    }
-  }
+  padding-left: calc(30px + (604 - 30) * ((100vw - 360px) / (1920 - 360)));
+  padding-right: calc(30px + (604 - 30) * ((100vw - 360px) / (1920 - 360)));
+   padding-bottom: 53px;
+ 
   @media (max-width: 1024px) {
     & {
       padding-top: 36px;
-      padding-left: 247px;
       padding-bottom: 36px;
     }
   }
   @media (max-width: 768px) {
     & {
       padding-top: 24px;
-      padding-left: 205px;
       padding-bottom: 24px;
     }
   }
   @media (max-width: 640px) {
     & {
-      padding: 16px 129px;
+      padding-top: 16px;
+      padding-bottom: 16px;
     }
   }
-  @media (max-width: 360px) {
-    & {
-      padding: 16px 30px;
-    }
-  }
+ 
   &__title {
     font-weight: 600;
     font-size: 28px;
